--- a/Preferences/String:comment typing pairs.plist
+++ b/Preferences/String:comment typing pairs.plist
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>name</key>
 	<string>Typing Pairs: String and Comment</string>
 	<key>scope</key>
-	<string>string.quoted.double, comment</string>
+	<string>string.quoted.double, comment, string.unquoted.heredoc</string>
 	<key>settings</key>
 	<dict>
 		<key>smartTypingPairs</key>
