Add wrap/unwrap braces commands.

--- a/info.plist
+++ b/info.plist
@@ -42,6 +42,9 @@
 			<string>------------------------------------</string>
 			<string>D77CB8B6-C75D-4A59-9181-45D27BC82C45</string>
 			<string>B9B9EEC2-26C1-4475-9642-3EA551999169</string>
+			<string>------------------------------------</string>
+			<string>DD42B10A-E753-4E08-A998-5C2E7C2D0CC2</string>
+			<string>52DA9EF9-6D1A-4E55-BFB9-BCB85C250715</string>
 		</array>
 		<key>submenus</key>
 		<dict>
